--- a/PassportManagementSystem/Views/Shared/_CustomLayout.cshtml
+++ b/PassportManagementSystem/Views/Shared/_CustomLayout.cshtml
@@ -3,11 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="~/Styles/HomeMasterPage.css" rel="stylesheet" />
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+    <div class="div-logo">
+        <h1 class="titlelogo"><img src="~/Images/logo_transparent.png" class="logo" /><span class="title">PASSPORT VISA MANAGEMENT SYSTEM</span></h1>
+    </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
@@ -19,7 +23,7 @@
                 </li>
                 <li class="nav-item">
                     @Html.ActionLink("Contact Us", "Contact", "Home", null, new { @class = "nav-link" })
-                </li>            
+                </li>
             </ul>
             <ul class="navbar-nav mr-auto1">
                 <li class="nav-item">
