--- a/PassportManagementSystem/Views/Shared/_DashboardLayout2.cshtml
+++ b/PassportManagementSystem/Views/Shared/_DashboardLayout2.cshtml
@@ -40,7 +40,7 @@
                 @Html.ActionLink("Apply Visa", "ApplyVisa", "PassportManagementSystem", null, new { @class = "nav-link" })
             </li>
             <li class="nav-item">
-                @Html.ActionLink("Visa Cancellation", "VisaCancellation", "PassportManagementSystem", null, new { @class = "nav-link" })
+                @Html.ActionLink("Visa Cancellation", "VisaAuthentication", "PassportManagementSystem", null, new { @class = "nav-link" })
             </li>
             <li class="nav-item">
                 @Html.ActionLink("About Us", "About", "PassportManagementSystem", null, new { @class = "nav-link" })
