--- a/PassportManagementSystem/Views/PassportManagementSystem/Home.cshtml
+++ b/PassportManagementSystem/Views/PassportManagementSystem/Home.cshtml
@@ -1,9 +1,22 @@
 ﻿@{
     ViewBag.Title = "Home Page";
+    <link href="~/Styles/Home.css" rel="stylesheet" />
 }
-
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="register-form">
+    <div class="div-left">
+        <img src="~/Images/PasspoerVIsa.jpg" class="passportvisa"/>
+    </div>
+    <div class="div-right">
+        <div class="jumbotron">
+            <h3 class="title-register" style="margin-bottom:5%;">WELCOME TO PASSPORT AND VISA MANAGEMENT SYSTEM</h3>
+            <p class="text-justify">
+                Passport Visa Management System (PVMS) application is a system used for registering Passport and Visa applications,
+                Apply for Passport and Visa also for renewal of Passport, and cancelation of Visa.
+            </p>
+            <p class="text-justify">
+                The System automates the entire work flow through the visa and passport facilitation process.
+                The automated system will create and maintain a knowledge repository for visa details and passport details.
+            </p>
+        </div>
+    </div>
 </div>
