--- a/PassportManagementSystem/Views/PassportManagementSystem/Login.cshtml
+++ b/PassportManagementSystem/Views/PassportManagementSystem/Login.cshtml
@@ -5,7 +5,7 @@
 @using (Html.BeginForm("Login", "PassportManagementSystem"))
 {
     <center>
-        <h2 style="margin-top:3%;margin-bottom:3%;">Login Form</h2>
+        <h2 style="margin-top:3%;margin-bottom:3%;">Login</h2>
         <div class="form-group">
             @Html.TextBoxFor(a => a.UserID, new { @class = "form-control", @placeholder = "User ID *", @onblur = "getContact();" })
             @Html.ValidationMessageFor(a => a.UserID, "", new { @class = "text-danger" })
