--- a/PassportManagementSystem/Views/PassportManagementSystem/PassportReIssue.cshtml
+++ b/PassportManagementSystem/Views/PassportManagementSystem/PassportReIssue.cshtml
@@ -10,33 +10,33 @@
 <div class="register-form">
     @using (Html.BeginForm())
     {
-        <div class="div-left">
-            <div class="form-group">
-                @Html.DropDownListFor(a => a.ReasonForReIssue, new List<SelectListItem> {
-                           new SelectListItem { Value = "Validity Expired" , Text = "Validity Expired" },
-                           new SelectListItem { Value = "Exhaustion of Pages" , Text = "Exhaustion of Pages" },
-                           new SelectListItem { Value = "Passport Damaged" , Text = "Passport Damaged " },
-                           new SelectListItem { Value = "Passport Lost" , Text = "Passport Lost" }
-                        }, "-- Select Reason for ReIssue -- *", new { @class = "form-control" })
-                @Html.ValidationMessageFor(a => a.ReasonForReIssue, "", new { @class = "text-danger" })
-            </div>
-            <div class="form-group">
-                @Html.TextBoxFor(a => a.UserID, new { @class = "form-control", @placeholder = "UserID *" })
-                @Html.ValidationMessageFor(a => a.UserID, "", new { @class = "text-danger" })
-            </div>
-            <div class="form-group">
-                @Html.TextBoxFor(a => a.Country, new { @class = "form-control", @placeholder = "Country *" })
-                @Html.ValidationMessageFor(a => a.Country, "", new { @class = "text-danger" })
-            </div>
-            <div class="form-group">
-                @Html.DropDownListFor(a => a.State, new SelectList(ViewBag.state, "STATE_NAME", "STATE_NAME", ViewBag.statename), "-- Select your State -- *", new { @class = "form-control" })
-                @Html.ValidationMessageFor(a => a.State, "", new { @class = "text-danger" })
-            </div>
-            <div class="form-group">
-                @Html.DropDownListFor(a => a.City, new SelectList(ViewBag.city, "CITY_NAME", "CITY_NAME"), "-- Select your City -- *", new { @class = "form-control"})
-                @Html.ValidationMessageFor(a => a.City, "", new { @class = "text-danger" })
-            </div>
+    <div class="div-left">
+        <div class="form-group">
+            @Html.DropDownListFor(a => a.ReasonForReIssue, new List<SelectListItem> {
+                       new SelectListItem { Value = "Validity Expired" , Text = "Validity Expired" },
+                       new SelectListItem { Value = "Exhaustion of Pages" , Text = "Exhaustion of Pages" },
+                       new SelectListItem { Value = "Passport Damaged" , Text = "Passport Damaged " },
+                       new SelectListItem { Value = "Passport Lost" , Text = "Passport Lost" }
+                    }, "-- Select Reason for ReIssue -- *", new { @class = "form-control" })
+            @Html.ValidationMessageFor(a => a.ReasonForReIssue, "", new { @class = "text-danger" })
         </div>
+        <div class="form-group">
+            @Html.TextBoxFor(a => a.UserID, new { @class = "form-control", @placeholder = "UserID *" })
+            @Html.ValidationMessageFor(a => a.UserID, "", new { @class = "text-danger" })
+        </div>
+        <div class="form-group">
+            @Html.TextBoxFor(a => a.Country, new { @class = "form-control", @placeholder = "Country *" })
+            @Html.ValidationMessageFor(a => a.Country, "", new { @class = "text-danger" })
+        </div>
+        <div class="form-group">
+            @Html.DropDownListFor(a => a.State, new SelectList(ViewBag.state, "STATE_NAME", "STATE_NAME", ViewBag.statename), "-- Select your State -- *", new { @class = "form-control" })
+            @Html.ValidationMessageFor(a => a.State, "", new { @class = "text-danger" })
+        </div>
+        <div class="form-group">
+            @Html.DropDownListFor(a => a.City, new SelectList(""), "-- Select your City -- *", new { @class = "form-control" })
+            @Html.ValidationMessageFor(a => a.City, "", new { @class = "text-danger" })
+        </div>
+    </div>
 
         <div class="div-right">
             <div class="form-group">
@@ -62,7 +62,7 @@
                 @Html.ValidationMessageFor(a => a.BookletType, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
-                @Html.TextBoxFor(a => a.IssueDate, new { @class = "form-control", @placeholder = "Issue Date DD/MM/YYYY*" })
+                @Html.TextBoxFor(a => a.IssueDate, new { @class = "form-control", @placeholder = "Issue Date *", @onfocus = "this.type='date'" })
                 @Html.ValidationMessageFor(a => a.IssueDate, "", new { @class = "text-danger" })
             </div>
             <input type="submit" class="btn btn-primary" value="SUBMIT" style="float:right;margin-right:37%;margin-top:5%;" />
@@ -87,12 +87,19 @@
         }
     }
 </div>
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script>
-    function getCity() {
-        var stateid = document.getElementById("State").value;
-        if (stateid.length != 0) {
-            window.location.href = "/PassportManagementSystem/PassportReIssue?sid=" + stateid;
-            document.getElementById("City").readonly = false;
-        }
-    }
+    $(document).ready(function () {
+        $('#State').change(function () {
+            $.ajax({
+                type: "post",
+                url: '/PassportManagementSystem/GetCity?STATE_NAME=' + $(this).val(),
+                contentType: "html",
+                success: function (response) {
+                    $("#City").empty();
+                    $("#City").append(response);
+                }
+            });
+        });
+    })
 </script>
