--- a/PassportManagementSystem/Views/PassportManagementSystem/Home.cshtml
+++ b/PassportManagementSystem/Views/PassportManagementSystem/Home.cshtml
@@ -11,7 +11,7 @@
             <h3 class="title-register" style="margin-bottom:5%;">WELCOME TO PASSPORT AND VISA MANAGEMENT SYSTEM</h3>
             <p class="text-justify">
                 Passport Visa Management System (PVMS) application is a system used for registering Passport and Visa applications,
-                Apply for Passport and Visa also for renewal of Passport, and cancelation of Visa.
+                Apply for Passport and Visa, also for renewal of Passport, and cancelation of Visa.
             </p>
             <p class="text-justify">
                 The System automates the entire work flow through the visa and passport facilitation process.
