--- a/PassportManagementSystem/Views/PassportManagementSystem/ApplyPassport.cshtml
+++ b/PassportManagementSystem/Views/PassportManagementSystem/ApplyPassport.cshtml
@@ -12,7 +12,7 @@
     {
         <div class="div-left">
             <div class="form-group">
-                @Html.TextBoxFor(a => a.UserID, new { @class = "form-control", @placeholder = "UserID *" })
+                @Html.TextBoxFor(a => a.UserID, new { @class = "form-control", @Value= ViewBag.UserID,@readonly="true"})
                 @Html.ValidationMessageFor(a => a.UserID, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
@@ -66,7 +66,7 @@
         }
         if (ViewBag.error != null)
         {
-            <div class="alert alert-dismissible alert-danger" style="position:absolute;margin:18% 22% 0% 28%;width:27%;">
+            <div class="alert alert-dismissible alert-danger" style="position:absolute;margin:18% 22% 0% 27%;width:30%;">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
                 <span>@ViewBag.error</span>
             </div>
