--- a/PassportManagementSystem/Views/PassportManagementSystem/ApplyVisa.cshtml
+++ b/PassportManagementSystem/Views/PassportManagementSystem/ApplyVisa.cshtml
@@ -11,7 +11,7 @@
     {
         <div class="div-left">
             <div class="form-group">
-                @Html.TextBoxFor(a => a.UserID, new { @class = "form-control", @placeholder = "UserID *" })
+                @Html.TextBoxFor(a => a.UserID, new { @class = "form-control", @Value = ViewBag.UserID, @readonly = "true" })
                 @Html.ValidationMessageFor(a => a.UserID, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
@@ -45,7 +45,7 @@
         <div class="div-right">
             @if (userdata != null)
             {
-                <div class="alert alert-dismissible alert-success" style="position:absolute;width:42%;padding-bottom:2%;margin-top:3%;">
+                <div class="alert alert-dismissible alert-success" style="position:absolute;width:42%;">
                     <button type="button" class="close" data-dismiss="alert">&times;</button>
                     <p>Dear User,</p>
                     <p>Your Visa requested has been accepted successfully with VisaID <span style="color:mediumblue">@userdata.VisaID</span>.</p>
