--- a/PassportManagementSystem/Views/PassportManagementSystem/VisaCancellation.cshtml
+++ b/PassportManagementSystem/Views/PassportManagementSystem/VisaCancellation.cshtml
@@ -12,7 +12,7 @@
         @using (Html.BeginForm())
         {
             <div class="form-group">
-                @Html.TextBoxFor(a =>a.UserID, new { @class = "form-control", @placeholder = "UserID *" })
+                @Html.TextBoxFor(a => a.UserID, new { @class = "form-control", @Value= ViewBag.UserID,@readonly="true"})
                 @Html.ValidationMessageFor(a => a.UserID, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
