--- a/PassportManagementSystem/Views/PassportManagementSystem/About.cshtml
+++ b/PassportManagementSystem/Views/PassportManagementSystem/About.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "About";
     <link href="~/Styles/About.css" rel="stylesheet" />
 }
 <h3 class="title-register">ABOUT US</h3>
