--- a/PassportManagementSystem/Views/PassportManagementSystem/Home.cshtml
+++ b/PassportManagementSystem/Views/PassportManagementSystem/Home.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="register-form">
     <div class="div-left">
-        <img src="~/Images/PasspoerVIsa.jpg" class="passportvisa"/>
+        <img src="~/Images/PassportVisa.jpg" class="passportvisa"/>
     </div>
     <div class="div-right">
         <div class="jumbotron">
