--- a/PassportManagementSystem/Views/PassportManagementSystem/ApplyPassport.cshtml
+++ b/PassportManagementSystem/Views/PassportManagementSystem/ApplyPassport.cshtml
@@ -12,7 +12,7 @@
     {
         <div class="div-left">
             <div class="form-group">
-                @Html.TextBoxFor(a => a.UserID, new { @class = "form-control", @Value= ViewBag.UserID,@readonly="true"})
+                @Html.TextBoxFor(a => a.UserID, new { @class = "form-control", @Value = ViewBag.UserID, @readonly = "true" })
                 @Html.ValidationMessageFor(a => a.UserID, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
@@ -20,7 +20,7 @@
                 @Html.ValidationMessageFor(a => a.Country, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
-                @Html.DropDownListFor(a => a.State, new SelectList(ViewBag.state, "STATE_NAME", "STATE_NAME"), "-- Select your State -- *", new {@class = "form-control" })
+                @Html.DropDownListFor(a => a.State, new SelectList(ViewBag.state, "STATE_NAME", "STATE_NAME"), "-- Select your State -- *", new { @class = "form-control" })
                 @Html.ValidationMessageFor(a => a.State, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
@@ -49,7 +49,7 @@
                 @Html.ValidationMessageFor(a => a.BookletType, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
-                @Html.TextBoxFor(a => a.IssueDate, new { @class = "form-control", @placeholder = "Issue Date *", @onfocus = "this.type='date'" })
+                @Html.TextBoxFor(a => a.IssueDate, new { @class = "form-control", @placeholder = "Issue Date DD/MM/YYYY *" })
                 @Html.ValidationMessageFor(a => a.IssueDate, "", new { @class = "text-danger" })
             </div>
             <input type="submit" class="btn btn-primary" value="APPLY" style="float:right;margin-right:37%;margin-top:5%;" />
@@ -74,19 +74,28 @@
     }
 </div>
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <script>
     $(document).ready(function () {
         $('#State').change(function () {
             $.ajax({
                 type: "post",
-                url: '/PassportManagementSystem/GetCity?STATE_NAME=' +$(this).val(),
+                url: '/PassportManagementSystem/GetCity?STATE_NAME=' + $(this).val(),
                 contentType: "html",
-                success: function (response)
-                {
+                success: function (response) {
                     $("#City").empty();
-                    $("#City").append(response);    
+                    $("#City").append(response);
                 }
             });
         });
-    })
+        $(function () {
+            $("#IssueDate").datepicker({
+                yearRange: 'nn:+10',
+                changeMonth: true,
+                changeYear: true,
+                dateFormat: 'dd/mm/yy',
+            });
+        });
+    });
 </script>
