--- a/PassportManagementSystem/Views/PassportManagementSystem/ApplyVisa.cshtml
+++ b/PassportManagementSystem/Views/PassportManagementSystem/ApplyVisa.cshtml
@@ -37,7 +37,7 @@
                 @Html.ValidationMessageFor(a => a.Occupation, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
-                @Html.TextBoxFor(a => a.DateOfApplication, new { @class = "form-control", @placeholder = "Date of Application *", @onfocus = "this.type='date'" })
+                @Html.TextBoxFor(a => a.DateOfApplication, new { @class = "form-control", @placeholder = "Date of Application DD/MM/YYYY *"})
                 @Html.ValidationMessageFor(a => a.DateOfApplication, "", new { @class = "text-danger" })
             </div>
             <input type="submit" class="btn btn-primary" value="APPLY" style="float:left;margin-top:5%;" />
@@ -70,3 +70,18 @@
         </div>
     }
 </div>
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script>
+    $(document).ready(function () {
+        $(function () {
+            $("#DateOfApplication").datepicker({
+                yearRange: 'nn:+10',
+                changeMonth: true,
+                changeYear: true,
+                dateFormat: 'dd/mm/yy',
+            });
+        });
+    })
+</script>
