--- a/PassportManagementSystem/Views/PassportManagementSystem/Register.cshtml
+++ b/PassportManagementSystem/Views/PassportManagementSystem/Register.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Register";
     PassportManagementSystem.Models.UserRegistration userdata = (PassportManagementSystem.Models.UserRegistration)ViewBag.data;
 }
+
 <h3 class="title-register">New User Registration</h3>
 <div style="float:right;color:red;font-weight:bold">* All Fields are Required</div>
 <div class="register-form">
@@ -19,7 +20,7 @@
                 @Html.ValidationMessageFor(a => a.SurName, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
-                @Html.TextBoxFor(a => a.DateOfBirth, new { @class = "form-control", @placeholder = "Date of Birth *",@onfocus="this.type='date'"})
+                @Html.TextBoxFor(a => a.DateOfBirth, new { @class = "form-control", @placeholder = "Date of Birth DD/MM/YYYY *" })
                 @Html.ValidationMessageFor(a => a.DateOfBirth, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
@@ -31,7 +32,7 @@
                 <p style="float:left;margin-left:25%;">@Html.RadioButtonFor(a => a.Gender, "Male", new { @class = "form-check-input" })Male</p>
                 <p style="float:right;margin-right:20%;">@Html.RadioButtonFor(a => a.Gender, "Female", new { @class = "form-check-input" })Female</p>
             </fieldset>
-            @Html.ValidationMessageFor(a => a.Gender,"", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(a => a.Gender, "", new { @class = "text-danger" })
         </div>
 
         <div class="div-right">
@@ -64,7 +65,7 @@
             </div>
             <div class="form-group">
                 @Html.TextBoxFor(a => a.HintAnswer, new { @class = "form-control", @placeholder = "Answer the above Hint Question *" })
-                @Html.ValidationMessageFor(a => a.HintAnswer, "",new { @class = "text-danger" })
+                @Html.ValidationMessageFor(a => a.HintAnswer, "", new { @class = "text-danger" })
             </div>
             <input type="submit" class="btn btn-primary" value="Register" style="float:right;margin-right:37%;margin-top:5%;" />
         </div>
@@ -79,3 +80,18 @@
         }
     }
 </div>
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script>
+    $(document).ready(function () {
+        $(function () {
+            $("#DateOfBirth").datepicker({
+                yearRange: '-100:nn',
+                changeMonth: true,
+                changeYear: true,
+                dateFormat: 'dd/mm/yy',
+            });
+        });
+    })
+</script>
